<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Fragment_nodeSetting" >

    <TextView
        android:id="@+id/sinkSettingShow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sinkSetting"
        android:textSize="30sp" />

    <RelativeLayout
        android:id="@+id/sinkCycleSetting"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sinkSettingShow"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/sendCycleTitle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/sendCycleTitle"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/sendCycleItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/sendCycleTitle"
            android:text="@string/sendCycleItem"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/sendCycleSelect"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/sendCycleItem" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/alertSetting"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sinkCycleSetting"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/alertSettingTitle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/alertSettingTitle"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/powerSettingItem1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/alertSettingTitle"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/powerSetting"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/powerSettingSpinner"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/addNewAlertShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/powerSettingItem1"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/alertSettingTitle" >

            <TextView
                android:id="@+id/addNewAlertTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/newAlertItem"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/alertManulInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/addNewAlertTitle"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alertManulInputName"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/alertManulInputName"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/alertManulInputValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/alertManulInput"
                android:layout_toRightOf="@id/addNewAlertTitle"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alertManulInputValue"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/alertManulValue"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

                <Spinner
                    android:id="@+id/alertManulSpinner"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/alertManulInputValue"
                android:layout_toRightOf="@id/addNewAlertTitle" >

                <Button
                    android:id="@+id/newAlertClear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset" />

                <Button
                    android:id="@+id/addNewAlert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addNewAlert" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ifAlertMusic"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/addNewAlertShow"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/alertSettingTitle"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isAlertMusic"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/yes"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/alertMuicPath"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ifAlertMusic"
            android:layout_toRightOf="@id/alertSettingTitle"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music"
                android:textSize="20sp" />

            <Button
                android:id="@+id/musicSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/musicSelect" />
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/settingOKButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="100dp"
        android:text="@string/settingOK" >
    </Button>

</RelativeLayout>