<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Fragment_nodeSetting" >

    <LinearLayout
        android:id="@+id/controlButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:orientation="vertical">
        <Button
            android:id="@+id/co2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/co2" />

        <Button
            android:id="@+id/light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light" />

        <Button
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity" />

        <Button
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature" />
    </LinearLayout>

    <senseHuge.gateway.ui.StatusValueCheckView
        android:id="@+id/myView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/controlButton" />

</RelativeLayout>